[package]
name = "archlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
tokio = { version = "1.44", features = ["io-util"] }  # Updated version, removed rt feature
serde_json = "1.0.140"  # Updated version
base64 = "0.22"  # Already latest
getrandom = { version = "0.2", features = ["js"] }  # Already latest
worker = "0.5.0"  # Keep pinned version
futures-util = "0.3.31"

# Async utilities
futures-util = "0.3.31"  # Updated version
pin-project-lite = "0.2.16"  # Updated version

# Cryptography
aes-gcm = "0.10"  # Already latest
aes = "0.8"  # Already latest
sha2 = "0.10"  # Already latest
md-5 = "0.10"  # Already latest

# HTTP and networking
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }  # Updated version, minimal features

# Utilities
uuid = { version = "1.16", features = ["v4", "js"] } # Updated version with v4 feature
bytes = "1.10"  # Updated version
anyhow = "1.0.97"  # Updated version
regex = "1.11"  # Updated version
once_cell = "1.21.3"  # Already latest
pretty-bytes = "0.2"  # Already latest

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
